--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Look Mama!! I can push to github</h1>
     <h3>My first ever website</h3>
 </body>
 </html>
