--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h3>My first ever website</h3>
     <p>I am not an alien.</p>
     <p>I am a part of this universe.</p>
+    <input type="text">
+    <br>
+    <button>Click me buddy!!</button>
 </body>
 </html>
